Fix the big rendering issue with 3d effect in mobile chrome browser. Now renders properly (except for slight z-index issue with 3d flippers).

--- a/CustomDrumSamples/static/css/styles.css
+++ b/CustomDrumSamples/static/css/styles.css
@@ -2427,6 +2427,9 @@ body,
   position: relative;
   height: 100%;
   overflow: hidden;
+}
+
+.z-index-fix {
   -webkit-transform: translateY(0px);
   transform: translateY(0px);
 }
