--- a/assets/sass/pages/_page_main.scss
+++ b/assets/sass/pages/_page_main.scss
@@ -14,13 +14,14 @@
   padding-top: 100px; // see through nav
 //  padding-top: 50px;
   position: absolute;
-  overflow: auto;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .on-top {
-  z-index: 30;
+  z-index: 200;
 }
 
 .below {
-  z-index: 20;
+  z-index: 190;
 }
